Fixed authentication endpoints

--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -91,7 +91,7 @@
 
                     <div class="text-center mt-4">
                         <p class="mb-0">Already have an account? 
-                            <a href="/auth/login" class="text-success text-decoration-none fw-bold">
+                            <a href="/login" class="text-success text-decoration-none fw-bold">
                                 Sign in here
                             </a>
                         </p>
