--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -65,7 +65,7 @@
 
                     <div class="text-center mt-4">
                         <p class="mb-0">Don't have an account? 
-                            <a href="/auth/signup" class="text-primary text-decoration-none fw-bold">
+                            <a href="/signup" class="text-primary text-decoration-none fw-bold">
                                 Create one now
                             </a>
                         </p>
